# robinhood-trading-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
docs/: AUTH.md
docs/superpowers/plans/: 2026-07-04-public-standalone-repo.md  2026-07-04-readonly-robinhood-snapshot.md  2026-07-05-fractional-stock-buy-sizing.md  2026-07-06-crypto-trading-lane.md
docs/superpowers/specs/: 2026-07-04-robinhood-trading-bot-design.md  2026-07-05-fractional-stock-buy-sizing-design.md  2026-07-06-crypto-trading-lane-design.md  2026-07-06-local-control-panel-risk-auth-scheduler-design.md
src/robinhood_trading_bot/: __init__.py  auth.py  cli.py  config.py  crypto.py  env.py  models.py  risk.py  snapshot.py
tests/: test_cli.py  test_config.py  test_crypto.py  test_risk.py  test_snapshot.py
tests/fixtures/: read_only_snapshot.json
