[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robinhood-trading-bot"
version = "0.1.0"
description = "Guarded Robinhood MCP trading bot scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Catnip202X" }]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
trading-bot = "robinhood_trading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
